Added Swagger headers schema
